--- a/css/gioithieu.css
+++ b/css/gioithieu.css
@@ -15,12 +15,12 @@ body {
 marquee {
     position: absolute;
     font-size: 30px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
+    font-family: cursive;
+    color: rgb(249, 139, 197);
     width: 100%;
-    margin-top: -20px;
+    margin-top: -30px;
     font-weight: bold;
-    text-shadow: rgb(0, 0, 233) -1px -2px 0.5em;
+    text-shadow: rgb(149, 149, 239) -1px -2px 0.5em;
     z-index: 2;
 }
 
@@ -102,7 +102,7 @@ marquee {
 /* background trang */
 
 .center {
-    background: url(../images/bien.jpg);
+    background: url(../images/anh5.jpg);
     /* background-image: linear-gradient( to right bottom, #FE0C6B, #29055E); */
     background-position: center;
     background-attachment: fixed;
@@ -210,8 +210,12 @@ marquee {
     left: 50%;
     transform: translate(-50%, -10%);
     transition: all 2s;
-    font-size: 55px;
+    font-size: 40px;
+    color: rgb(249, 79, 147);
+    background-color: #f4d8d8;
     font-family: 'Courier New', Courier, monospace;
+    border: #7bd4f5;
+    border-style: dashed;
 }
 
 
@@ -468,13 +472,13 @@ select {
 
 @keyframes doimaubg {
     0% {
-        background-image: linear-gradient( 135deg, rgba(161, 238, 193, 0.7), rgba(63, 90, 212, 0.7)), url(../images/bien.jpg);
+        background-image: linear-gradient( 135deg, rgba(161, 238, 193, 0.7), rgba(63, 90, 212, 0.7)), url(../images/anh5.jpg);
     }
     50% {
-        background-image: linear-gradient( 135deg, rgba(230, 70, 144, 0.7), rgba(32, 31, 7, 0.7)), url(../images/bien.jpg);
+        background-image: linear-gradient( 135deg, rgba(230, 70, 144, 0.7), rgba(32, 31, 7, 0.7)), url(../images/anh5.jpg);
     }
     100% {
-        background-image: linear-gradient( 135deg, rgba(253, 234, 234, 0.7), rgba(213, 224, 60, 0.7)), url(../images/bien.jpg);
+        background-image: linear-gradient( 135deg, rgba(253, 234, 234, 0.7), rgba(213, 224, 60, 0.7)), url(../images/anh5.jpg);
     }
 }
 
